# magic-box

./: .codespellrc  .env  .env.production  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .npmrc  Dockerfile  README.md  biome.json  craco.config.ts  credits.txt  cypress.config.ts  eslint.config.ts  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  webpack.config.ts
.claude/: ecc-tools.json  identity.json
.claude/commands/: bugfix-ui-or-style.md  feature-development-ui-component-update.md
.codex/: AGENTS.md
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  codeql.yml  end-to-end-test.yaml  firebase-hosting-merge.yaml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase-hosting.yaml  lint.yml  static.yaml  test.yaml  wasm-test.yaml
cypress/: .eslintrc.json  eslint.config.mjs  global.d.ts  tsconfig.json
cypress/e2e/: magicbox.cy.ts
cypress/support/: commands.ts  component-index.html  e2e.ts
firebase/: database.rules.json
public/: 404.html  firebase-auth-ui.css  firebase-auth-ui.css.origin  index.css  index.html  manifest.json
src/: App.cy.tsx  App.js  App.tsx  firebaseConfig.ts  index.css  index.tsx  react-app-env.d.ts  service-worker.ts  serviceWorkerRegistration.ts  setupTests.ts
src/config/: config.js  firebase.js  menuItems.js  routes.js
src/contexts/: SettingsContext.tsx
src/functions/: base64.js  base64.ts  clipboard.js  clipboard.ts  crypto.ts  helper.ts  muiHelper.ts
src/global/: buildInfo.ts  env.ts  styles.css
src/modules/: Box.ts  BoxSource.ts  box.ts
src/pages/: SettingsPage.tsx
src/types/: pwa-register.d.ts
wasmModules/base64-box/: .gitignore  Cargo.toml
wasmModules/math-box/: .gitignore  BENCHMARK.md  Cargo.toml  README.md
wasmModules/math-box/bench/: compare.mjs
wasmModules/math-box/benches/: eval.rs
wasmModules/math-box/src/: builtins.rs  compiler.rs  error.rs  lexer.rs  lib.rs  limits.rs  namespace.rs  ops.rs  parser.rs  units.rs  value.rs  vm.rs
wasmModules/math-box/tests/: integration.rs
(+136 files in other folders)
